--- a/Lattice_FPGA/SevenSegClock/AutoShift_lsetwr.html
+++ b/Lattice_FPGA/SevenSegClock/AutoShift_lsetwr.html
@@ -9,7 +9,7 @@
 <PRE><A name="Map_Twr"></A><B><U><big>Lattice Synthesis Timing Report</big></U></B>
 --------------------------------------------------------------------------------
 Lattice Synthesis Timing Report, Version  
-Sat Jan  3 04:35:18 2015
+Tue Jan  6 04:58:11 2015
 
 Copyright (c) 1991-1994 by NeoCAD Inc. All rights reserved.
 Copyright (c) 1995 AT&T Corp.   All rights reserved.
@@ -27,13 +27,13 @@ Report level:    verbose report, limited to 3 items per constraint
 
 
 ================================================================================
-Constraint: create_clock -period 5.000000 -name clk2 [get_nets osc_clk_c_c]
+Constraint: create_clock -period 5.000000 -name clk2 [get_nets latch_c]
             0 items scored, 0 timing errors detected.
 --------------------------------------------------------------------------------
 
 
 ================================================================================
-Constraint: create_clock -period 5.000000 -name clk1 [get_nets latch_c]
+Constraint: create_clock -period 5.000000 -name clk1 [get_nets osc_clk_c_c]
             0 items scored, 0 timing errors detected.
 --------------------------------------------------------------------------------
 
@@ -48,21 +48,21 @@ Passed:  The following path meets requirements by 3.449ns
 
  Logical Details:  Cell type  Pin type       Cell name  (clock net +/-)
 
-   Source:         FD1S3AX    CK             tmp_i22  (from clk +)
-   Destination:    FD1S3AX    D              tmp_i23  (to clk +)
+   Source:         FD1S3AX    CK             tmp__0_i22  (from clk +)
+   Destination:    FD1S3AX    D              tmp__0_i23  (to clk +)
 
    Delay:                   1.405ns  (28.7% logic, 71.3% route), 1 logic levels.
 
  Constraint Details:
 
-      1.405ns data_path tmp_i22 to tmp_i23 meets
+      1.405ns data_path tmp__0_i22 to tmp__0_i23 meets
       5.000ns delay constraint less
       0.146ns L_S requirement (totaling 4.854ns) by 3.449ns
 
- Path Details: tmp_i22 to tmp_i23
+ Path Details: tmp__0_i22 to tmp__0_i23
 
    Name    Fanout   Delay (ns)          Pins               Resource(Cell.Net)
-L_CO        ---     0.403             CK to Q              tmp_i22 (from clk)
+L_CO        ---     0.403             CK to Q              tmp__0_i22 (from clk)
 Route         2   e 1.002                                  tmp[21]
                   --------
                     1.405  (28.7% logic, 71.3% route), 1 logic levels.
@@ -72,21 +72,21 @@ Passed:  The following path meets requirements by 3.449ns
 
  Logical Details:  Cell type  Pin type       Cell name  (clock net +/-)
 
-   Source:         FD1S3AX    CK             tmp_i21  (from clk +)
-   Destination:    FD1S3AX    D              tmp_i22  (to clk +)
+   Source:         FD1S3AX    CK             tmp__0_i21  (from clk +)
+   Destination:    FD1S3AX    D              tmp__0_i22  (to clk +)
 
    Delay:                   1.405ns  (28.7% logic, 71.3% route), 1 logic levels.
 
  Constraint Details:
 
-      1.405ns data_path tmp_i21 to tmp_i22 meets
+      1.405ns data_path tmp__0_i21 to tmp__0_i22 meets
       5.000ns delay constraint less
       0.146ns L_S requirement (totaling 4.854ns) by 3.449ns
 
- Path Details: tmp_i21 to tmp_i22
+ Path Details: tmp__0_i21 to tmp__0_i22
 
    Name    Fanout   Delay (ns)          Pins               Resource(Cell.Net)
-L_CO        ---     0.403             CK to Q              tmp_i21 (from clk)
+L_CO        ---     0.403             CK to Q              tmp__0_i21 (from clk)
 Route         2   e 1.002                                  tmp[20]
                   --------
                     1.405  (28.7% logic, 71.3% route), 1 logic levels.
@@ -96,21 +96,21 @@ Passed:  The following path meets requirements by 3.449ns
 
  Logical Details:  Cell type  Pin type       Cell name  (clock net +/-)
 
-   Source:         FD1S3AX    CK             tmp_i20  (from clk +)
-   Destination:    FD1S3AX    D              tmp_i21  (to clk +)
+   Source:         FD1S3AX    CK             tmp__0_i20  (from clk +)
+   Destination:    FD1S3AX    D              tmp__0_i21  (to clk +)
 
    Delay:                   1.405ns  (28.7% logic, 71.3% route), 1 logic levels.
 
  Constraint Details:
 
-      1.405ns data_path tmp_i20 to tmp_i21 meets
+      1.405ns data_path tmp__0_i20 to tmp__0_i21 meets
       5.000ns delay constraint less
       0.146ns L_S requirement (totaling 4.854ns) by 3.449ns
 
- Path Details: tmp_i20 to tmp_i21
+ Path Details: tmp__0_i20 to tmp__0_i21
 
    Name    Fanout   Delay (ns)          Pins               Resource(Cell.Net)
-L_CO        ---     0.403             CK to Q              tmp_i20 (from clk)
+L_CO        ---     0.403             CK to Q              tmp__0_i20 (from clk)
 Route         2   e 1.002                                  tmp[19]
                   --------
                     1.405  (28.7% logic, 71.3% route), 1 logic levels.
@@ -125,10 +125,10 @@ Constraint                              |   Constraint|       Actual|Levels
 --------------------------------------------------------------------------------
                                         |             |             |
 create_clock -period 5.000000 -name     |             |             |
-clk2 [get_nets osc_clk_c_c]             |            -|            -|     0  
+clk2 [get_nets latch_c]                 |            -|            -|     0  
                                         |             |             |
 create_clock -period 5.000000 -name     |             |             |
-clk1 [get_nets latch_c]                 |            -|            -|     0  
+clk1 [get_nets osc_clk_c_c]             |            -|            -|     0  
                                         |             |             |
 create_clock -period 5.000000 -name     |             |             |
 clk0 [get_nets clk_c]                   |     5.000 ns|     1.551 ns|     1  
@@ -145,10 +145,10 @@ All constraints were met.
 
 Timing errors: 0  Score: 0
 
-Constraints cover  22 paths, 23 nets, and 66 connections (49.3% coverage)
+Constraints cover  22 paths, 23 nets, and 65 connections (49.6% coverage)
 
 
-Peak memory: 193712128 bytes, TRCE: 806912 bytes, DLYMAN: 0 bytes
+Peak memory: 186834944 bytes, TRCE: 8192 bytes, DLYMAN: 0 bytes
 CPU_TIME_REPORT: 0 secs 
 
 
