--- a/Lattice_FPGA/SevenSegClock/SevenSegClock_SevenSegClock_bgn.html
+++ b/Lattice_FPGA/SevenSegClock/SevenSegClock_SevenSegClock_bgn.html
@@ -19,11 +19,11 @@ Loading design for application Bitgen from file SevenSegClock_SevenSegClock.ncd.
 Design name: AutoShift
 NCD version: 3.3
 Vendor:      LATTICE
-Device:      LCMXO2-7000HE
+Device:      LCMXO2-640UHC
 Package:     TQFP144
 Performance: 5
-Loading device for application Bitgen from file 'xo2c7000.nph' in environment: /usr/local/diamond/3.3_x64/ispfpga.
-Package Status:                     Final          Version 1.36.
+Loading device for application Bitgen from file 'xo2c1200.nph' in environment: /usr/local/diamond/3.3_x64/ispfpga.
+Package Status:                     Final          Version 1.39.
 Performance Hardware Data Status:   Final          Version 26.4.
 
 Running DRC.
@@ -79,10 +79,10 @@ Saving bit stream in "SevenSegClock_SevenSegClock.jed".
 ===========
 UFM Summary.
 ===========
-UFM Size:        2046 Pages (128*2046 Bits).
+UFM Size:        511 Pages (128*511 Bits).
 UFM Utilization: General Purpose Flash Memory.
  
-Available General Purpose Flash Memory: 2046 Pages (Page 0 to Page 2045).
+Available General Purpose Flash Memory:  511 Pages (Page 0 to Page 510).
 Initialized UFM Pages:                     0 Page.
  
 
