--- a/Lattice_FPGA/SevenSegClock/SevenSegClock_SevenSegClock_par.html
+++ b/Lattice_FPGA/SevenSegClock/SevenSegClock_SevenSegClock_par.html
@@ -12,7 +12,7 @@ Copyright (c) 1995 AT&amp;T Corp.   All rights reserved.
 Copyright (c) 1995-2001 Lucent Technologies Inc.  All rights reserved.
 Copyright (c) 2001 Agere Systems   All rights reserved.
 Copyright (c) 2002-2014 Lattice Semiconductor Corporation,  All rights reserved.
-Sun Jan  4 07:24:41 2015
+Tue Jan  6 04:59:20 2015
 
 /usr/local/diamond/3.3_x64/ispfpga/bin/lin64/par -f
 SevenSegClock_SevenSegClock.p2t SevenSegClock_SevenSegClock_map.ncd
@@ -25,17 +25,17 @@ Preference file: SevenSegClock_SevenSegClock.prf.
 Level/      Number      Worst       Timing      Worst       Timing      Run         NCD
 Cost [ncd]  Unrouted    Slack       Score       Slack(hold) Score(hold) Time        Status
 ----------  --------    -----       ------      ----------- ----------- -----       ------
-5_1   *     0           478.066     0           0.435       0           07          Complete        
+5_1   *     0           478.293     0           0.395       0           09          Complete        
 
 
 * : Design saved.
 
-Total (real) run time for 1-seed: 7 secs 
+Total (real) run time for 1-seed: 9 secs 
 
 par done!
 
 Lattice Place and Route Report for Design &quot;SevenSegClock_SevenSegClock_map.ncd&quot;
-Sun Jan  4 07:24:41 2015
+Tue Jan  6 04:59:20 2015
 
 
 <A name="par_best"></A><B><U><big>Best Par Run</big></U></B>
@@ -49,11 +49,11 @@ Loading design for application par from file SevenSegClock_SevenSegClock_map.ncd
 Design name: AutoShift
 NCD version: 3.3
 Vendor:      LATTICE
-Device:      LCMXO2-7000HE
+Device:      LCMXO2-640UHC
 Package:     TQFP144
 Performance: 5
-Loading device for application par from file &apos;xo2c7000.nph&apos; in environment: /usr/local/diamond/3.3_x64/ispfpga.
-Package Status:                     Final          Version 1.36.
+Loading device for application par from file &apos;xo2c1200.nph&apos; in environment: /usr/local/diamond/3.3_x64/ispfpga.
+Package Status:                     Final          Version 1.39.
 Performance Hardware Data Status:   Final          Version 26.4.
 License checked out.
 
@@ -62,24 +62,24 @@ Ignore Preference Error(s):  True
 
 <A name="par_dus"></A><B><U><big>Device utilization summary:</big></U></B>
 
-   PIO (prelim)   24+4(JTAG)/336     8% used
-                  24+4(JTAG)/115     24% bonded
+   PIO (prelim)   83+4(JTAG)/108     81% used
+                  83+4(JTAG)/108     81% bonded
 
-   SLICE             46/3432          1% used
+   SLICE             44/320          13% used
 
    OSC                1/1           100% used
 
 
-Number of Signals: 129
-Number of Connections: 293
+Number of Signals: 126
+Number of Connections: 341
 
 Pin Constraint Summary:
-   24 out of 24 pins locked (100% locked).
+   23 out of 23 pins locked (100% locked).
 
 The following 3 signals are selected to use the primary clock routing resources:
-    n1377 (driver: SLICE_26, clk load #: 15)
+    n2420 (driver: SLICE_28, clk load #: 14)
     clk_c (driver: clk, clk load #: 12)
-    latch_c (driver: latch, clk load #: 11)
+    latch_c (driver: latch, clk load #: 10)
 
 WARNING - par: Signal &quot;clk_c&quot; is selected to use Primary clock resources. However, its driver comp &quot;clk&quot; is located at &quot;33&quot;, which is not a dedicated pin for connecting to Primary clock resources. General routing has to be used to route this signal, and it might suffer from excessive delay or skew.
 WARNING - par: Signal &quot;latch_c&quot; is selected to use Primary clock resources. However, its driver comp &quot;latch&quot; is located at &quot;35&quot;, which is not a dedicated pin for connecting to Primary clock resources. General routing has to be used to route this signal, and it might suffer from excessive delay or skew.
@@ -88,19 +88,20 @@ The following 1 signal is selected to use the secondary clock routing resources:
     osc_clk_c_c (driver: OSCH_inst, clk load #: 6, sr load #: 0, ce load #: 0)
 
 No signal is selected as Global Set/Reset.
+.
 Starting Placer Phase 0.
-
-Finished Placer Phase 0.  REAL time: 2 secs 
+.......
+Finished Placer Phase 0.  REAL time: 0 secs 
 
 Starting Placer Phase 1.
-....................
-Placer score = 17692.
-Finished Placer Phase 1.  REAL time: 5 secs 
+...................
+Placer score = 17838.
+Finished Placer Phase 1.  REAL time: 8 secs 
 
 Starting Placer Phase 2.
 .
-Placer score =  17653
-Finished Placer Phase 2.  REAL time: 5 secs 
+Placer score =  16925
+Finished Placer Phase 2.  REAL time: 8 secs 
 
 
 
@@ -108,15 +109,15 @@ Finished Placer Phase 2.  REAL time: 5 secs
 
 Global Clock Resources:
   CLK_PIN    : 0 out of 8 (0%)
-  General PIO: 2 out of 336 (0%)
-  PLL        : 0 out of 2 (0%)
+  General PIO: 2 out of 108 (1%)
+  PLL        : 0 out of 1 (0%)
   DCM        : 0 out of 2 (0%)
   DCC        : 0 out of 8 (0%)
 
 Quadrants All (TL, TR, BL, BR) - Global Clocks:
-  PRIMARY &quot;n1377&quot; from F1 on comp &quot;SLICE_26&quot; on site &quot;R2C19A&quot;, clk load = 15
-  PRIMARY &quot;clk_c&quot; from comp &quot;clk&quot; on PIO site &quot;33 (PL24B)&quot;, clk load = 12
-  PRIMARY &quot;latch_c&quot; from comp &quot;latch&quot; on PIO site &quot;35 (PL25B)&quot;, clk load = 11
+  PRIMARY &quot;n2420&quot; from F1 on comp &quot;SLICE_28&quot; on site &quot;R2C13C&quot;, clk load = 14
+  PRIMARY &quot;clk_c&quot; from comp &quot;clk&quot; on PIO site &quot;33 (PL10B)&quot;, clk load = 12
+  PRIMARY &quot;latch_c&quot; from comp &quot;latch&quot; on PIO site &quot;35 (PL10D)&quot;, clk load = 10
   SECONDARY &quot;osc_clk_c_c&quot; from OSC on comp &quot;OSCH_inst&quot; on site &quot;OSC&quot;, clk load = 6, ce load = 0, sr load = 0
 
   PRIMARY  : 3 out of 8 (37%)
@@ -129,38 +130,36 @@ Edge Clocks:
 
 
 I/O Usage Summary (final):
-   24 + 4(JTAG) out of 336 (8.3%) PIO sites used.
-   24 + 4(JTAG) out of 115 (24.3%) bonded PIO sites used.
-   Number of PIO comps: 24; differential: 0.
+   83 + 4(JTAG) out of 108 (80.6%) PIO sites used.
+   83 + 4(JTAG) out of 108 (80.6%) bonded PIO sites used.
+   Number of PIO comps: 83; differential: 0.
    Number of Vref pins used: 0.
 
 I/O Bank Usage Summary:
 +----------+----------------+------------+-----------+
 | I/O Bank | Usage          | Bank Vccio | Bank Vref |
 +----------+----------------+------------+-----------+
-| 0        | 0 / 28 (  0%)  | -          | -         |
-| 1        | 0 / 29 (  0%)  | -          | -         |
-| 2        | 0 / 29 (  0%)  | -          | -         |
-| 3        | 6 / 9 ( 66%)   | 3.3V       | -         |
-| 4        | 8 / 10 ( 80%)  | 3.3V       | -         |
-| 5        | 10 / 10 (100%) | 3.3V       | -         |
+| 0        | 19 / 28 ( 67%) | 3.3V       | -         |
+| 1        | 25 / 26 ( 96%) | 3.3V       | -         |
+| 2        | 16 / 28 ( 57%) | 3.3V       | -         |
+| 3        | 23 / 26 ( 88%) | 3.3V       | -         |
 +----------+----------------+------------+-----------+
 
-Total placer CPU time: 4 secs 
+Total placer CPU time: 8 secs 
 
 Dumping design to file SevenSegClock_SevenSegClock.dir/5_1.ncd.
 
-0 connections routed; 293 unrouted.
+0 connections routed; 341 unrouted.
 Starting router resource preassignment
 WARNING - par: The driver of primary clock net clk_c is not placed on one of the sites dedicated for primary clocks. This primary clock will be routed to an H-spine through general routing resource and might suffer from excessive delay or skew.
 WARNING - par: The driver of primary clock net latch_c is not placed on one of the sites dedicated for primary clocks. This primary clock will be routed to an H-spine through general routing resource and might suffer from excessive delay or skew.
 
 WARNING - par: The following clock signals will be routed by using generic routing resource and may suffer from excessive delay and/or skew.
-   Signal=n1378 loads=2 clock_loads=2
+   Signal=n1008 loads=2 clock_loads=2
 
-Completed router resource preassignment. Real time: 7 secs 
+Completed router resource preassignment. Real time: 9 secs 
 
-Start NBR router at Sun Jan 04 07:24:48 UTC 2015
+Start NBR router at Tue Jan 06 04:59:29 UTC 2015
 
 *****************************************************************
 Info: NBR allows conflicts(one node used by more than one signal)
@@ -175,47 +174,50 @@ Note: NBR uses a different method to calculate timing slacks. The
       your design. Thanks.                                       
 *****************************************************************
 
-Start NBR special constraint process at Sun Jan 04 07:24:48 UTC 2015
+Start NBR special constraint process at Tue Jan 06 04:59:29 UTC 2015
 
-Start NBR section for initial routing at Sun Jan 04 07:24:48 UTC 2015
+Start NBR section for initial routing at Tue Jan 06 04:59:29 UTC 2015
 Level 4, iteration 1
-10(0.00%) conflicts; 0(0.00%) untouched conn; 0 (nbr) score; 
-Estimated worst slack/total negative slack&lt;setup&gt;: 478.066ns/0.000ns; real time: 7 secs 
+7(0.01%) conflicts; 0(0.00%) untouched conn; 0 (nbr) score; 
+Estimated worst slack/total negative slack&lt;setup&gt;: 478.293ns/0.000ns; real time: 9 secs 
 
 Info: Initial congestion level at 75% usage is 0
 Info: Initial congestion area  at 75% usage is 0 (0.00%)
 
-Start NBR section for normal routing at Sun Jan 04 07:24:48 UTC 2015
+Start NBR section for normal routing at Tue Jan 06 04:59:29 UTC 2015
 Level 4, iteration 1
-7(0.00%) conflicts; 0(0.00%) untouched conn; 0 (nbr) score; 
-Estimated worst slack/total negative slack&lt;setup&gt;: 478.066ns/0.000ns; real time: 7 secs 
-Level 4, iteration 2
 4(0.00%) conflicts; 0(0.00%) untouched conn; 0 (nbr) score; 
-Estimated worst slack/total negative slack&lt;setup&gt;: 478.066ns/0.000ns; real time: 7 secs 
+Estimated worst slack/total negative slack&lt;setup&gt;: 478.293ns/0.000ns; real time: 9 secs 
+Level 4, iteration 2
+1(0.00%) conflict; 0(0.00%) untouched conn; 0 (nbr) score; 
+Estimated worst slack/total negative slack&lt;setup&gt;: 478.293ns/0.000ns; real time: 9 secs 
 Level 4, iteration 3
-3(0.00%) conflicts; 0(0.00%) untouched conn; 0 (nbr) score; 
-Estimated worst slack/total negative slack&lt;setup&gt;: 478.066ns/0.000ns; real time: 7 secs 
+1(0.00%) conflict; 0(0.00%) untouched conn; 0 (nbr) score; 
+Estimated worst slack/total negative slack&lt;setup&gt;: 478.293ns/0.000ns; real time: 9 secs 
 Level 4, iteration 4
-3(0.00%) conflicts; 0(0.00%) untouched conn; 0 (nbr) score; 
-Estimated worst slack/total negative slack&lt;setup&gt;: 478.066ns/0.000ns; real time: 7 secs 
+1(0.00%) conflict; 0(0.00%) untouched conn; 0 (nbr) score; 
+Estimated worst slack/total negative slack&lt;setup&gt;: 478.293ns/0.000ns; real time: 9 secs 
 Level 4, iteration 5
-2(0.00%) conflicts; 0(0.00%) untouched conn; 0 (nbr) score; 
-Estimated worst slack/total negative slack&lt;setup&gt;: 478.066ns/0.000ns; real time: 7 secs 
+1(0.00%) conflict; 0(0.00%) untouched conn; 0 (nbr) score; 
+Estimated worst slack/total negative slack&lt;setup&gt;: 478.293ns/0.000ns; real time: 9 secs 
 Level 4, iteration 6
 1(0.00%) conflict; 0(0.00%) untouched conn; 0 (nbr) score; 
-Estimated worst slack/total negative slack&lt;setup&gt;: 478.066ns/0.000ns; real time: 7 secs 
+Estimated worst slack/total negative slack&lt;setup&gt;: 478.293ns/0.000ns; real time: 9 secs 
 Level 4, iteration 7
+1(0.00%) conflict; 0(0.00%) untouched conn; 0 (nbr) score; 
+Estimated worst slack/total negative slack&lt;setup&gt;: 478.293ns/0.000ns; real time: 9 secs 
+Level 4, iteration 8
 0(0.00%) conflict; 0(0.00%) untouched conn; 0 (nbr) score; 
-Estimated worst slack/total negative slack&lt;setup&gt;: 478.066ns/0.000ns; real time: 7 secs 
+Estimated worst slack/total negative slack&lt;setup&gt;: 478.293ns/0.000ns; real time: 9 secs 
 
-Start NBR section for setup/hold timing optimization with effort level 3 at Sun Jan 04 07:24:48 UTC 2015
+Start NBR section for setup/hold timing optimization with effort level 3 at Tue Jan 06 04:59:29 UTC 2015
 
-Start NBR section for re-routing at Sun Jan 04 07:24:48 UTC 2015
+Start NBR section for re-routing at Tue Jan 06 04:59:29 UTC 2015
 Level 4, iteration 1
 0(0.00%) conflict; 0(0.00%) untouched conn; 0 (nbr) score; 
-Estimated worst slack/total negative slack&lt;setup&gt;: 478.066ns/0.000ns; real time: 7 secs 
+Estimated worst slack/total negative slack&lt;setup&gt;: 478.293ns/0.000ns; real time: 9 secs 
 
-Start NBR section for post-routing at Sun Jan 04 07:24:48 UTC 2015
+Start NBR section for post-routing at Tue Jan 06 04:59:29 UTC 2015
 
 End NBR router with 0 unrouted connection
 
@@ -223,7 +225,7 @@ NBR Summary
 -----------
   Number of unrouted connections : 0 (0.00%)
   Number of connections with timing violations : 0 (0.00%)
-  Estimated worst slack&lt;setup&gt; : 478.066ns
+  Estimated worst slack&lt;setup&gt; : 478.293ns
   Timing score&lt;setup&gt; : 0
 -----------
 Notes: The timing info is calculated for SETUP only and all PAR_ADJs are ignored.
@@ -231,12 +233,12 @@ Notes: The timing info is calculated for SETUP only and all PAR_ADJs are ignored
 
 
 WARNING - par: The following clock signals will be routed by using generic routing resource and may suffer from excessive delay and/or skew.
-   Signal=n1378 loads=2 clock_loads=2
+   Signal=n1008 loads=2 clock_loads=2
 
-Total CPU time 6 secs 
-Total REAL time: 7 secs 
+Total CPU time 9 secs 
+Total REAL time: 9 secs 
 Completely routed.
-End of route.  293 routed (100.00%); 0 unrouted.
+End of route.  341 routed (100.00%); 0 unrouted.
 Checking DRC ... 
 No errors found.
 
@@ -252,14 +254,14 @@ All signals are completely routed.
 
 PAR_SUMMARY::Run status = completed
 PAR_SUMMARY::Number of unrouted conns = 0
-PAR_SUMMARY::Worst  slack&lt;setup/&lt;ns&gt;&gt; = 478.066
+PAR_SUMMARY::Worst  slack&lt;setup/&lt;ns&gt;&gt; = 478.293
 PAR_SUMMARY::Timing score&lt;setup/&lt;ns&gt;&gt; = 0.000
-PAR_SUMMARY::Worst  slack&lt;hold /&lt;ns&gt;&gt; = 0.435
+PAR_SUMMARY::Worst  slack&lt;hold /&lt;ns&gt;&gt; = 0.395
 PAR_SUMMARY::Timing score&lt;hold /&lt;ns&gt;&gt; = 0.000
 PAR_SUMMARY::Number of errors = 0
 
-Total CPU  time to completion: 6 secs 
-Total REAL time to completion: 7 secs 
+Total CPU  time to completion: 9 secs 
+Total REAL time to completion: 9 secs 
 
 par done!
 
