--- a/Lattice_FPGA/SevenSegClock_tcl.html
+++ b/Lattice_FPGA/SevenSegClock_tcl.html
@@ -6,48 +6,7 @@
 -->
 </STYLE>
 </HEAD>
-<PRE><A name="pn141229193205"></A><B><U><big>pn141229193205</big></U></B>
-#Start recording tcl command: 12/29/2014 19:23:34
-#Project Location: C:/Users/JustinW7/Dropbox/AlarmClockProject/Lattice; Project name: SevenSegClock
-prj_project new -name "SevenSegClock" -impl "SevenSegClock" -dev LCMXO2-7000HC-5TG144C -synthesis "lse" -lpf "C:/Users/JustinW7/Dropbox/AlarmClockProject/Lattice/SevenSegClock/source/SevenSegClock.lpf"
-file copy -force -- "C:/Users/JustinW7/Dropbox/AlarmClockProject/7SegClock/Clock/SevenSegClock.lpf" "C:/Users/JustinW7/Dropbox/AlarmClockProject/7SegClock/Clock/SevenSegClock/source/AutoShift.v" "C:/Users/JustinW7/Dropbox/AlarmClockProject/Lattice/SevenSegClock/source"
-prj_src add "C:/Users/JustinW7/Dropbox/AlarmClockProject/Lattice/SevenSegClock/source/AutoShift.v"
-prj_project save
-prj_run Export -impl SevenSegClock -task Jedecgen
-pgr_project save "C:/Users/JustinW7/Dropbox/AlarmClockProject/Lattice/SevenSegClock/SevenSegClock.xcf"
-prj_src add -exclude "C:/Users/JustinW7/Dropbox/AlarmClockProject/Lattice/SevenSegClock/SevenSegClock.xcf"
-prj_src enable "C:/Users/JustinW7/Dropbox/AlarmClockProject/Lattice/SevenSegClock/SevenSegClock.xcf"
-prj_run Export -impl SevenSegClock -task Jedecgen
-pgr_program run
-pgr_project save "C:/Users/JustinW7/Dropbox/AlarmClockProject/Lattice/SevenSegClock/SevenSegClock.xcf"
-pgr_project close
-pgr_project open "C:/Users/JustinW7/Dropbox/AlarmClockProject/Lattice/SevenSegClock/SevenSegClock.xcf"
-pgr_project close
-#Stop recording: 12/29/2014 19:32:05
-
-
-
-<A name="pn141231040010"></A><B><U><big>pn141231040010</big></U></B>
-#Start recording tcl command: 12/31/2014 03:57:31
-#Project Location: /home/justin/7SegClock/7SegClock/Lattice_FPGA; Project name: SevenSegClock
-prj_project open "/home/justin/7SegClock/7SegClock/Lattice_FPGA/SevenSegClock.ldf"
-pwc_command new
-pwc_command exit
-#Stop recording: 12/31/2014 04:00:10
-
-
-
-<A name="pn150101064533"></A><B><U><big>pn150101064533</big></U></B>
-#Start recording tcl command: 12/31/2014 22:54:28
-#Project Location: /home/justin/7SegClock/7SegClock/Lattice_FPGA; Project name: SevenSegClock
-prj_project open "/home/justin/7SegClock/7SegClock/Lattice_FPGA/SevenSegClock.ldf"
-prj_src add "/home/justin/7SegClock/7SegClock/Lattice_FPGA/SevenSegClock/source/AutoShift_1.v"
-prj_src remove "/home/justin/7SegClock/7SegClock/Lattice_FPGA/SevenSegClock/source/AutoShift.v"
-#Stop recording: 1/1/2015 06:45:33
-
-
-
-<A name="pn150101205739"></A><B><U><big>pn150101205739</big></U></B>
+<PRE><A name="pn150101205739"></A><B><U><big>pn150101205739</big></U></B>
 #Start recording tcl command: 1/1/2015 20:40:40
 #Project Location: /home/justin/7SegClock/7SegClock/Lattice_FPGA; Project name: SevenSegClock
 prj_project open "/home/justin/7SegClock/7SegClock/Lattice_FPGA/SevenSegClock.ldf"
@@ -115,6 +74,31 @@ prj_run Export -impl SevenSegClock -task Jedecgen
 prj_project open "C:/Users/JustinW7/Dropbox/AlarmClockProject/7SegClock/Lattice_FPGA/SevenSegClock.ldf"
 prj_project close
 #Stop recording: 1/3/2015 01:03:24
+
+
+
+<A name="pn150106050226"></A><B><U><big>pn150106050226</big></U></B>
+#Start recording tcl command: 1/6/2015 02:15:00
+#Project Location: /home/justin/7SegClock/7SegClock/Lattice_FPGA; Project name: SevenSegClock
+prj_project open "/home/justin/7SegClock/7SegClock/Lattice_FPGA/SevenSegClock.ldf"
+prj_dev set -part LCMXO2-640UHC-5TG144C
+prj_run Export -impl SevenSegClock -task Jedecgen
+prj_run Export -impl SevenSegClock -task Jedecgen
+prj_run Export -impl SevenSegClock -task Jedecgen
+prj_run Export -impl SevenSegClock -task Jedecgen
+prj_run Export -impl SevenSegClock -task Jedecgen
+prj_run Export -impl SevenSegClock -task Jedecgen
+#Stop recording: 1/6/2015 05:02:26
+
+
+
+<A name="pn150108034703"></A><B><U><big>pn150108034703</big></U></B>
+#Start recording tcl command: 1/8/2015 03:41:22
+#Project Location: /home/justin/7SegClock/7SegClock/Lattice_FPGA; Project name: SevenSegClock
+prj_project open "/home/justin/7SegClock/7SegClock/Lattice_FPGA/SevenSegClock.ldf"
+prj_run Synthesis -impl SevenSegClock -task Lattice_Synthesis
+prj_project close
+#Stop recording: 1/8/2015 03:47:03
 
 
 
