--- a/Lattice_FPGA/SevenSegClock_tcl.html
+++ b/Lattice_FPGA/SevenSegClock_tcl.html
@@ -6,25 +6,7 @@
 -->
 </STYLE>
 </HEAD>
-<PRE><A name="pn150102025505"></A><B><U><big>pn150102025505</big></U></B>
-#Start recording tcl command: 1/2/2015 02:42:29
-#Project Location: /home/justin/7SegClock/7SegClock/Lattice_FPGA; Project name: SevenSegClock
-prj_project open "/home/justin/7SegClock/7SegClock/Lattice_FPGA/SevenSegClock.ldf"
-prj_project close
-#Stop recording: 1/2/2015 02:55:05
-
-
-
-<A name="pn150102030056"></A><B><U><big>pn150102030056</big></U></B>
-#Start recording tcl command: 1/2/2015 02:55:47
-#Project Location: /home/justin/7SegClock/7SegClock/Lattice_FPGA; Project name: SevenSegClock
-prj_project open "/home/justin/7SegClock/7SegClock/Lattice_FPGA/SevenSegClock.ldf"
-prj_project close
-#Stop recording: 1/2/2015 03:00:56
-
-
-
-<A name="pn150102062832"></A><B><U><big>pn150102062832</big></U></B>
+<PRE><A name="pn150102062832"></A><B><U><big>pn150102062832</big></U></B>
 #Start recording tcl command: 1/2/2015 05:05:34
 #Project Location: /home/justin/7SegClock/7SegClock/Lattice_FPGA; Project name: SevenSegClock
 prj_project open "/home/justin/7SegClock/7SegClock/Lattice_FPGA/SevenSegClock.ldf"
@@ -96,6 +78,52 @@ prj_project open "/home/justin/7SegClock/7SegClock/Lattice_FPGA/SevenSegClock.ld
 #Project Location: /home/justin/7SegClock/7SegClock/Lattice_FPGA; Project name: SevenSegClock
 prj_project open "/home/justin/7SegClock/7SegClock/Lattice_FPGA/SevenSegClock.ldf"
 #Stop recording: 1/26/2015 01:43:40
+
+
+
+<A name="pn150312032943"></A><B><U><big>pn150312032943</big></U></B>
+#Start recording tcl command: 3/12/2015 03:26:49
+#Project Location: /home/justin/7SegClock/7SegClock/Lattice_FPGA; Project name: SevenSegClock
+prj_project open "/home/justin/7SegClock/7SegClock/Lattice_FPGA/SevenSegClock.ldf"
+#Stop recording: 3/12/2015 03:29:43
+
+
+
+<A name="pn150315014010"></A><B><U><big>pn150315014010</big></U></B>
+#Start recording tcl command: 3/15/2015 00:57:46
+#Project Location: /home/justin/7SegClock/7SegClock/Lattice_FPGA; Project name: SevenSegClock
+prj_project open "/home/justin/7SegClock/7SegClock/Lattice_FPGA/SevenSegClock.ldf"
+prj_run Export -impl SevenSegClock -task Jedecgen
+pgr_project open "/home/justin/7SegClock/7SegClock/Lattice_FPGA/SevenSegClock/SevenSegClock.xcf"
+pgr_program run
+prj_run Export -impl SevenSegClock -task Jedecgen
+pgr_program run
+pgr_program run
+pgr_program run
+pgr_program run
+pgr_program run
+prj_run Export -impl SevenSegClock -task Jedecgen
+pgr_program run
+pgr_program run
+pgr_program run
+pgr_project save "/home/justin/7SegClock/7SegClock/Lattice_FPGA/SevenSegClock/SevenSegClock.xcf"
+pgr_project close
+pgr_project save "/home/justin/7SegClock/7SegClock/Lattice_FPGA/SevenSegClock/SevenSegClock.xcf"
+pgr_program set -port FTUSB-1
+pgr_project close
+pgr_program set -cable USB
+pgr_program set -port EzUSB-0
+pgr_project close
+pgr_program set -cable USB2
+pgr_program set -port FTUSB-0
+pgr_project close
+pgr_project save "/home/justin/7SegClock/7SegClock/Lattice_FPGA/SevenSegClock/SevenSegClock.xcf"
+pgr_project close
+pgr_project open "/home/justin/7SegClock/7SegClock/Lattice_FPGA/SevenSegClock/SevenSegClock.xcf"
+pgr_project close
+pgr_project save "/home/justin/7SegClock/7SegClock/Lattice_FPGA/SevenSegClock/SevenSegClock.xcf"
+pgr_project close
+#Stop recording: 3/15/2015 01:40:10
 
 
 
