--- a/Lattice_FPGA/SevenSegClock/SevenSegClock_SevenSegClock_mrp.html
+++ b/Lattice_FPGA/SevenSegClock/SevenSegClock_SevenSegClock_mrp.html
@@ -22,7 +22,7 @@ Target Vendor:  LATTICE
 Target Device:  LCMXO2-640UHCTQFP144
 Target Performance:   5
 Mapper:  xo2c00,  version:  Diamond (64-bit) 3.3.0.109
-Mapped on:  01/06/15  04:59:19
+Mapped on:  03/15/15  01:44:49
 
 
 <A name="mrp_ds"></A><B><U><big>Design Summary</big></U></B>
@@ -38,7 +38,7 @@ Mapped on:  01/06/15  04:59:19
       Number of distributed RAM:   0 (0 LUT4s)
       Number of ripple logic:      6 (12 LUT4s)
       Number of shift registers:   0
-   Number of PIO sites used: 83 + 4(JTAG) out of 108 (81%)
+   Number of PIO sites used: 84 + 4(JTAG) out of 108 (81%)
    Number of block RAMs:  0 out of 7 (0%)
    Number of GSRs:  0 out of 1 (0%)
    EFB used :       No
@@ -64,40 +64,42 @@ Mapped on:  01/06/15  04:59:19
       2. Number of logic LUT4s does not include count of distributed RAM and
      ripple logic.
    Number of clocks:  5
+     Net n2325: 14 loads, 14 rising, 0 falling (Driver:
+     i1202_1_lut_rep_6_2_lut_3_lut_4_lut )
      Net clk_c: 12 loads, 12 rising, 0 falling (Driver: PIO clk )
+
      Net osc_clk_c_c: 6 loads, 6 rising, 0 falling (Driver: OSCH_inst )
      Net latch_c: 10 loads, 10 rising, 0 falling (Driver: PIO latch )
-
-     Net n1008: 2 loads, 2 rising, 0 falling (Driver: i1079_1_lut_2_lut_4_lut )
-     Net n2420: 14 loads, 14 rising, 0 falling (Driver: i1_2_lut_rep_8_4_lut )
+     Net n2326: 2 loads, 2 rising, 0 falling (Driver:
+     i1201_2_lut_rep_7_3_lut_4_lut )
    Number of Clock Enables:  0
    Number of LSRs:  9
      Net ledA1_0: 1 loads, 1 LSLICEs
-     Net n2063: 2 loads, 2 LSLICEs
-     Net n2073: 4 loads, 4 LSLICEs
-     Net n1977: 4 loads, 4 LSLICEs
-     Net ledA1_2: 1 loads, 1 LSLICEs
-     Net ledA1_1: 1 loads, 1 LSLICEs
-     Net ledA1_5: 1 loads, 1 LSLICEs
+     Net n1976: 2 loads, 2 LSLICEs
+     Net n2062: 4 loads, 4 LSLICEs
+     Net n2060: 4 loads, 4 LSLICEs
      Net ledA1_4: 1 loads, 1 LSLICEs
      Net ledA1_3: 1 loads, 1 LSLICEs
+     Net ledA1_5: 1 loads, 1 LSLICEs
+     Net ledA1_2: 1 loads, 1 LSLICEs
+     Net ledA1_1: 1 loads, 1 LSLICEs
    Number of nets driven by tri-state buffers:  0
    Top 10 highest fanout non-clock nets:
      Net segment_0: 18 loads
      Net segment_1: 17 loads
      Net segment_2: 16 loads
+     Net heartbeat_c: 13 loads
      Net cnt_7: 12 loads
      Net cnt_8: 12 loads
-     Net cnt_9: 12 loads
-     Net cnt_6: 11 loads
-     Net n1977: 4 loads
-     Net n2073: 4 loads
-     Net n2063: 2 loads
+     Net cnt_6: 10 loads
+     Net n2060: 4 loads
+     Net n2062: 4 loads
+     Net n1976: 2 loads
 
 
 
 
-   Number of warnings:  0
+   Number of warnings:  2
    Number of errors:    0
      
 
@@ -106,7 +108,12 @@ Mapped on:  01/06/15  04:59:19
 
 <A name="mrp_dwe"></A><B><U><big>Design Errors/Warnings</big></U></B>
 
-   No errors or warnings present.
+WARNING - map: Multiple comps assigned to site "67". Only one comp will be
+     assigned to this location.
+WARNING - map: Pref conflict: Multi-locate on site. Ignoring LOCATE COMP "clk"
+     SITE "67" ;
+        Keeping LOCATE COMP "latch" SITE "67" ;
+     .
 
 
 
@@ -120,14 +127,16 @@ Mapped on:  01/06/15  04:59:19
 +---------------------+-----------+-----------+------------+
 | Digit2[7]           | OUTPUT    | LVCMOS33  |            |
 +---------------------+-----------+-----------+------------+
+
 | data                | INPUT     | LVCMOS33  |            |
++---------------------+-----------+-----------+------------+
+| clk                 | INPUT     | LVCMOS33  |            |
 +---------------------+-----------+-----------+------------+
 | Digit4[15]          | OUTPUT    | LVCMOS33  |            |
 +---------------------+-----------+-----------+------------+
-| latch               | INPUT     | LVCMOS33  |            |
+| heartbeat           | OUTPUT    | LVCMOS33  |            |
 +---------------------+-----------+-----------+------------+
 | Digit4[16]          | OUTPUT    | LVCMOS33  |            |
-
 +---------------------+-----------+-----------+------------+
 | Digit4[17]          | OUTPUT    | LVCMOS33  |            |
 +---------------------+-----------+-----------+------------+
@@ -135,7 +144,7 @@ Mapped on:  01/06/15  04:59:19
 +---------------------+-----------+-----------+------------+
 | Digit4[19]          | OUTPUT    | LVCMOS33  |            |
 +---------------------+-----------+-----------+------------+
-| clk                 | INPUT     | LVCMOS33  |            |
+| latch               | INPUT     | LVCMOS33  |            |
 +---------------------+-----------+-----------+------------+
 | Digit4[1]           | OUTPUT    | LVCMOS33  |            |
 +---------------------+-----------+-----------+------------+
@@ -175,6 +184,7 @@ Mapped on:  01/06/15  04:59:19
 +---------------------+-----------+-----------+------------+
 | Digit3[16]          | OUTPUT    | LVCMOS33  |            |
 +---------------------+-----------+-----------+------------+
+
 | Digit4[12]          | OUTPUT    | LVCMOS33  |            |
 +---------------------+-----------+-----------+------------+
 | Digit4[9]           | OUTPUT    | LVCMOS33  |            |
@@ -184,7 +194,6 @@ Mapped on:  01/06/15  04:59:19
 | Digit4[3]           | OUTPUT    | LVCMOS33  |            |
 +---------------------+-----------+-----------+------------+
 | Digit4[0]           | OUTPUT    | LVCMOS33  |            |
-
 +---------------------+-----------+-----------+------------+
 | Digit2[15]          | OUTPUT    | LVCMOS33  |            |
 +---------------------+-----------+-----------+------------+
@@ -232,6 +241,7 @@ Mapped on:  01/06/15  04:59:19
 +---------------------+-----------+-----------+------------+
 | Digit1[8]           | OUTPUT    | LVCMOS33  |            |
 +---------------------+-----------+-----------+------------+
+
 | Digit1[9]           | OUTPUT    | LVCMOS33  |            |
 +---------------------+-----------+-----------+------------+
 | Digit1[10]          | OUTPUT    | LVCMOS33  |            |
@@ -241,7 +251,6 @@ Mapped on:  01/06/15  04:59:19
 | Digit2[4]           | OUTPUT    | LVCMOS33  |            |
 +---------------------+-----------+-----------+------------+
 | Digit2[5]           | OUTPUT    | LVCMOS33  |            |
-
 +---------------------+-----------+-----------+------------+
 | Digit1[11]          | OUTPUT    | LVCMOS33  |            |
 +---------------------+-----------+-----------+------------+
@@ -288,28 +297,31 @@ Mapped on:  01/06/15  04:59:19
 
 
 
+
+
+
+
 <A name="mrp_rm"></A><B><U><big>Removed logic</big></U></B>
 
 Block i2 undriven or does not drive anything - clipped.
 Block GSR_INST undriven or does not drive anything - clipped.
-Signal n2069 was merged into signal ledA1_3
-Signal n2071 was merged into signal ledA1_4
-Signal n2065 was merged into signal ledA1_0
-Signal n2072 was merged into signal ledA1_5
-Signal n2066 was merged into signal ledA1_1
-Signal n2068 was merged into signal ledA1_2
+Signal n1979 was merged into signal ledA1_1
+Signal n1981 was merged into signal ledA1_2
+Signal n1985 was merged into signal ledA1_5
+Signal n1978 was merged into signal ledA1_0
+Signal n1982 was merged into signal ledA1_3
+Signal n1984 was merged into signal ledA1_4
 Signal VCC_net undriven or does not drive anything - clipped.
-
-Signal cnt_735_add_4_11/S1 undriven or does not drive anything - clipped.
-Signal cnt_735_add_4_11/CO undriven or does not drive anything - clipped.
-Signal cnt_735_add_4_1/S0 undriven or does not drive anything - clipped.
-Signal cnt_735_add_4_1/CI undriven or does not drive anything - clipped.
-Block i979_1_lut was optimized away.
-Block i981_1_lut was optimized away.
-Block i975_1_lut was optimized away.
-Block i982_1_lut was optimized away.
-Block i976_1_lut was optimized away.
-Block i978_1_lut was optimized away.
+Signal cnt_727_add_4_11/S1 undriven or does not drive anything - clipped.
+Signal cnt_727_add_4_11/CO undriven or does not drive anything - clipped.
+Signal cnt_727_add_4_1/S0 undriven or does not drive anything - clipped.
+Signal cnt_727_add_4_1/CI undriven or does not drive anything - clipped.
+Block i940_1_lut was optimized away.
+Block i942_1_lut was optimized away.
+Block i946_1_lut was optimized away.
+Block i939_1_lut was optimized away.
+Block i943_1_lut was optimized away.
+Block i945_1_lut was optimized away.
 
 
 
@@ -345,16 +357,6 @@ Instance Name: OSCH_inst
    Total REAL Time: 0 secs  
    Peak Memory Usage: 155 MB
         
-
-
-
-
-
-
-
-
-
-
 
 
 
